# thumbnail-polish

./: LICENSE  README.md  cabal.project  thumbnail-polish.cabal
src/Graphics/: Thumbnail.hs
