cabal-version:       2.4
name:                thumbnail-polish
version:             0.1.0.0
synopsis:            Image thumbnail creation
homepage:            https://github.com/alx741/thumbnail-polish
-- bug-reports:
license:             BSD-3-Clause
license-file:        LICENSE
author:              Daniel Campoverde
maintainer:          alx@sillybytes.net
category:            Graphics
extra-source-files:  README.md
-- description:

library
  exposed-modules:
    Graphics.Thumbnail
  -- other-modules:
  -- other-extensions:
  build-depends:
      base ^>=4.12.0.0
    , bytestring
    , data-default >= 0.5.3
    , directory
    , friday
    , friday-devil
    , nonce >= 1.0.0 && < 1.1.0
    , resourcet >= 1.2.2
  hs-source-dirs:      src
  default-language:    Haskell2010
